force-app/main/default/objects/BPF__c/BPF__c.object-meta.xml
<CustomObject>
    <label>BPF</label>
    <nameField>
        <displayFormat>BPF-{00000}</displayFormat>
        <label>BPF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>