force-app/main/default/objects/BPF__c/fields/Accountnumber__c.field-meta.xml
<CustomField>
    <fullName>Accountnumber__c</fullName>
    <label>Account number:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>