force-app/main/default/objects/BPF__c/fields/AgentDifficulty__c.field-meta.xml
<CustomField>
    <fullName>AgentDifficulty__c</fullName>
    <inlineHelpText>Has there been any difficulty in obtaining the required information from agent?</inlineHelpText>
    <label>Agent Difficulty ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>