force-app/main/default/objects/BPF__c/fields/AgentFamilyTies__c.field-meta.xml
<CustomField>
    <fullName>AgentFamilyTies__c</fullName>
    <inlineHelpText>To your knowledge, does agent (or any owner or director of agent) have personal associations or family ties with any of Hoogwegt’s customers?</inlineHelpText>
    <label>Agent Family Ties ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>