force-app/main/default/objects/BPF__c/fields/AgentFamilyTiesDetails__c.field-meta.xml
<CustomField>
    <fullName>AgentFamilyTiesDetails__c</fullName>
    <inlineHelpText>If to your knowledge, agent (or any owner or director of agent) have personal associations or family ties with any of Hoogwegt’s customers, please provide details.</inlineHelpText>
    <label>Agent Family Ties Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>