force-app/main/default/objects/BPF__c/fields/AgentServices__c.field-meta.xml
<CustomField>
    <fullName>AgentServices__c</fullName>
    <inlineHelpText>What services will be provided by agent?</inlineHelpText>
    <label>Agent Services ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>