force-app/main/default/objects/BPF__c/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <inlineHelpText>Roughly what percentage of the anticipated annual revenue of agent does the compensation constitute?</inlineHelpText>
    <label>Annual Revenue % ?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>