force-app/main/default/objects/BPF__c/fields/BA_City__c.field-meta.xml
<CustomField>
    <fullName>BA_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>