force-app/main/default/objects/BPF__c/fields/BankContact__c.field-meta.xml
<CustomField>
    <fullName>BankContact__c</fullName>
    <label>Bank Contact:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>