force-app/main/default/objects/BPF__c/fields/Bankname__c.field-meta.xml
<CustomField>
    <fullName>Bankname__c</fullName>
    <label>Bank name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>