force-app/main/default/objects/BPF__c/fields/Billing_Address_if_different__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_if_different__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address (if different)</label>
    <type>Text</type>
</CustomField>