force-app/main/default/objects/BPF__c/fields/BPF__c.field-meta.xml
<CustomField>
    <fullName>BPF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPF</label>
    <referenceTo>BPF__c</referenceTo>
    <relationshipLabel>BPF</relationshipLabel>
    <relationshipName>BPF</relationshipName>
    <type>Lookup</type>
</CustomField>