force-app/main/default/objects/BPF__c/fields/BranchOffice__c.field-meta.xml
<CustomField>
    <fullName>BranchOffice__c</fullName>
    <label>Branch Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>