force-app/main/default/objects/BPF__c/fields/BranchOffice_formula__c.field-meta.xml
<CustomField>
    <fullName>BranchOffice_formula__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Office</label>
    <type>Text</type>
</CustomField>