force-app/main/default/objects/BPF__c/fields/City_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>City_Of_Incorporation__c</fullName>
    <label>City Of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>