force-app/main/default/objects/BPF__c/fields/CodeofConduct__c.field-meta.xml
<CustomField>
    <fullName>CodeofConduct__c</fullName>
    <inlineHelpText>Does the company have its own code of conduct or similar compliance /ethics policy or other anti-bribery/corruption policy in place?</inlineHelpText>
    <label>Code of Conduct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>