force-app/main/default/objects/BPF__c/fields/CodeofConductDetail__c.field-meta.xml
<CustomField>
    <fullName>CodeofConductDetail__c</fullName>
    <inlineHelpText>If the company does not have a code of conduct, please provide details.</inlineHelpText>
    <label>Code of Conduct Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>