force-app/main/default/objects/BPF__c/fields/Company_State_Owned__c.field-meta.xml
<CustomField>
    <fullName>Company_State_Owned__c</fullName>
    <inlineHelpText>Is the company (fully or partially) state owned?</inlineHelpText>
    <label>Company State Owned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>