force-app/main/default/objects/BPF__c/fields/Companyphonenumber__c.field-meta.xml
<CustomField>
    <fullName>Companyphonenumber__c</fullName>
    <label>Company phone number</label>
    <type>Phone</type>
</CustomField>