force-app/main/default/objects/BPF__c/fields/CompanyStateOwnedDetail__c.field-meta.xml
<CustomField>
    <fullName>CompanyStateOwnedDetail__c</fullName>
    <inlineHelpText>If the company is (fully or partially) state owned, please provide details.</inlineHelpText>
    <label>Company State Owned Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>