force-app/main/default/objects/BPF__c/fields/Companywebsite__c.field-meta.xml
<CustomField>
    <fullName>Companywebsite__c</fullName>
    <label>Company website</label>
    <type>Url</type>
</CustomField>