force-app/main/default/objects/BPF__c/fields/ContactJobTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactJobTitle__c</fullName>
    <label>Contact Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>