force-app/main/default/objects/BPF__c/fields/ContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>ContactSalutation__c</fullName>
    <label>Contact Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>