force-app/main/default/objects/BPF__c/fields/ContractTotal__c.field-meta.xml
<CustomField>
    <fullName>ContractTotal__c</fullName>
    <inlineHelpText>What is the value of the contract in total?  Please enter a dollar amount.</inlineHelpText>
    <label>Contract Total ?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>