force-app/main/default/objects/BPF__c/fields/Country_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Incorporation__c</fullName>
    <label>Country Of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>