force-app/main/default/objects/BPF__c/fields/CountryDetails__c.field-meta.xml
<CustomField>
    <fullName>CountryDetails__c</fullName>
    <inlineHelpText>In what country/countries will the services be provided by agent?  Please provide an explanation if the country/countries where the services are provided is not the same as the country in which agent is based.</inlineHelpText>
    <label>Country Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>