force-app/main/default/objects/BPF__c/fields/Credit_Terms_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms_Requested__c</fullName>
    <inlineHelpText>How much credit and what terms are requested to cover the expected level of business?</inlineHelpText>
    <label>Credit/Terms Requested ?</label>
    <type>TextArea</type>
</CustomField>