force-app/main/default/objects/BPF__c/fields/Customer_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_Form_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://ismdev2-hoogdev2.cs1.force.com/form/BPFSiteForm?id=&apos;&amp; Id , &apos;Click Here&apos;,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Form Link</label>
    <type>Text</type>
</CustomField>