force-app/main/default/objects/BPF__c/fields/DBA_name__c.field-meta.xml
<CustomField>
    <fullName>DBA_name__c</fullName>
    <label>DBA name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>