force-app/main/default/objects/BPF__c/fields/DifficultyDetails__c.field-meta.xml
<CustomField>
    <fullName>DifficultyDetails__c</fullName>
    <inlineHelpText>If there been any difficulty in obtaining the required information from agent, please provide details.</inlineHelpText>
    <label>Difficulty Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>