force-app/main/default/objects/BPF__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Email Address:</label>
    <type>Email</type>
</CustomField>