force-app/main/default/objects/BPF__c/fields/EvidenceofTaxAvoidance__c.field-meta.xml
<CustomField>
    <fullName>EvidenceofTaxAvoidance__c</fullName>
    <inlineHelpText>Are there indications of tax avoidance (for example tax havens) by client?</inlineHelpText>
    <label>Evidence of Tax Avoidance ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>