force-app/main/default/objects/BPF__c/fields/Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Status__c</fullName>
    <formula>IF(ExpirationDate__c &gt; TODAY() + 30,&quot;Active&quot;,
IF(ExpirationDate__c &lt;= TODAY(),&quot;Expired&quot;,
IF(ISBLANK(ExpirationDate__c), &quot;Not Specified&quot;,
&quot;Expired Pending&quot;)))</formula>
    <label>Expiration Status</label>
    <type>Text</type>
</CustomField>