force-app/main/default/objects/BPF__c/fields/FactsDetails__c.field-meta.xml
<CustomField>
    <fullName>FactsDetails__c</fullName>
    <inlineHelpText>If there any other facts or circumstances which could be relevant, please provide details.</inlineHelpText>
    <label>Facts Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>