force-app/main/default/objects/BPF__c/fields/FamilyTies__c.field-meta.xml
<CustomField>
    <fullName>FamilyTies__c</fullName>
    <inlineHelpText>To your knowledge, do any of the owners or directors of client have personal associations or family ties with public officials?</inlineHelpText>
    <label>Family Ties ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>