force-app/main/default/objects/BPF__c/fields/FamilyTiesDetails__c.field-meta.xml
<CustomField>
    <fullName>FamilyTiesDetails__c</fullName>
    <inlineHelpText>If to your knowledge, any of the owners or directors of client have personal associations or family ties with public officials, please provide details.</inlineHelpText>
    <label>Family Ties Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>