force-app/main/default/objects/BPF__c/fields/FamilyTieswithAgent__c.field-meta.xml
<CustomField>
    <fullName>FamilyTieswithAgent__c</fullName>
    <inlineHelpText>Do you have any personal associations or family ties with the customer?</inlineHelpText>
    <label>Trader Family Ties with Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>