force-app/main/default/objects/BPF__c/fields/FurtherDetails__c.field-meta.xml
<CustomField>
    <fullName>FurtherDetails__c</fullName>
    <inlineHelpText>Is any further due diligence required?</inlineHelpText>
    <label>Further Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>