force-app/main/default/objects/BPF__c/fields/FurtherDueDiligence__c.field-meta.xml
<CustomField>
    <fullName>FurtherDueDiligence__c</fullName>
    <inlineHelpText>If any further due diligence is required, please provide details.</inlineHelpText>
    <label>Further Due Diligence ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>