force-app/main/default/objects/BPF__c/fields/GCI_Category__c.field-meta.xml
<CustomField>
    <fullName>GCI_Category__c</fullName>
    <formula>CASE(
TEXT(PO_Country__c),

&quot;Afghanistan&quot;,&quot;Index 1&quot;,
&quot;Bangladesh&quot;,&quot;Index 1&quot;,
&quot;Brazil&quot;,&quot;Index 1&quot;,
&quot;Dominican Republic&quot;,&quot;Index 1&quot;,
&quot;Ecuador&quot;,&quot;Index 1&quot;,
&quot;Egypt&quot;,&quot;Index 1&quot;,
&quot;El Salvador&quot;,&quot;Index 1&quot;,
&quot;Guatemala&quot;,&quot;Index 1&quot;,
&quot;Haiti&quot;,&quot;Index 1&quot;,
&quot;Honduras&quot;,&quot;Index 1&quot;,
&quot;Lebanon&quot;,&quot;Index 1&quot;,
&quot;Mexico&quot;,&quot;Index 1&quot;,
&quot;Nicaragua&quot;,&quot;Index 1&quot;,
&quot;Pakistan&quot;,&quot;Index 1&quot;,
&quot;Peru&quot;,&quot;Index 1&quot;,
&quot;Syria&quot;,&quot;Index 1&quot;,
&quot;Vietnam&quot;,&quot;Index 1&quot;,

&quot;Argentina&quot;,&quot;Index 2&quot;,
&quot;Bahrain&quot;,&quot;Index 2&quot;,
&quot;China&quot;,&quot;Index 2&quot;,
&quot;Colombia&quot;,&quot;Index 2&quot;,
&quot;Costa Rica&quot;,&quot;Index 2&quot;,
&quot;India&quot;,&quot;Index 2&quot;,
&quot;Indonesia&quot;,&quot;Index 2&quot;,
&quot;Jamaica&quot;,&quot;Index 2&quot;,
&quot;Jordan&quot;,&quot;Index 2&quot;,
&quot;Korea, Republic of&quot;,&quot;Index 2&quot;,
&quot;Malaysia&quot;,&quot;Index 2&quot;,
&quot;Oman&quot;,&quot;Index 2&quot;,
&quot;Panama&quot;,&quot;Index 2&quot;,
&quot;Philippines&quot;,&quot;Index 2&quot;,
&quot;Saudi Arabia&quot;,&quot;Index 2&quot;,
&quot;Thailand&quot;,&quot;Index 2&quot;,

&quot;Australia&quot;,&quot;Index 3&quot;,
&quot;Canada&quot;,&quot;Index 3&quot;,
&quot;Chile&quot;,&quot;Index 3&quot;,
&quot;Denmark&quot;,&quot;Index 3&quot;,
&quot;Hong Kong&quot;,&quot;Index 3&quot;,
&quot;Japan&quot;,&quot;Index 3&quot;,
&quot;Netherlands&quot;,&quot;Index 3&quot;,
&quot;Singapore&quot;,&quot;Index 3&quot;,
&quot;Switzerland&quot;,&quot;Index 3&quot;,
&quot;Taiwan&quot;,&quot;Index 3&quot;,
&quot;United Arab Emirates&quot;,&quot;Index 3&quot;,
&quot;Uruguay&quot;,&quot;Index 3&quot;,
&quot;United States&quot;,&quot;Index 3&quot;,

null)</formula>
    <label>GCI Category</label>
    <type>Text</type>
</CustomField>