force-app/main/default/objects/BPF__c/fields/How_long_do_we_know_the_client__c.field-meta.xml
<CustomField>
    <fullName>How_long_do_we_know_the_client__c</fullName>
    <label>How long do we know the client?</label>
    <type>TextArea</type>
</CustomField>