force-app/main/default/objects/BPF__c/fields/HowLongClient__c.field-meta.xml
<CustomField>
    <fullName>HowLongClient__c</fullName>
    <inlineHelpText>How long have we known the client or prospect  Enter the number of years we&apos;ve known the organization.</inlineHelpText>
    <label>How Long Client ?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>