force-app/main/default/objects/BPF__c/fields/HUSRepresentDetails__c.field-meta.xml
<CustomField>
    <fullName>HUSRepresentDetails__c</fullName>
    <inlineHelpText>If client will represent Hoogwegt in front of government or regulatory authorities, entities or officials please describe below.</inlineHelpText>
    <label>HUS Represent Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>