force-app/main/default/objects/BPF__c/fields/Legalentitytype__c.field-meta.xml
<CustomField>
    <fullName>Legalentitytype__c</fullName>
    <label>Legal entity type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Listed Entity</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole proprietorship/natural person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>