force-app/main/default/objects/BPF__c/fields/LineofBusiness__c.field-meta.xml
<CustomField>
    <fullName>LineofBusiness__c</fullName>
    <label>Line of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>