force-app/main/default/objects/BPF__c/fields/MA_StateProvince__c.field-meta.xml
<CustomField>
    <fullName>MA_StateProvince__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>