force-app/main/default/objects/BPF__c/fields/MA_StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>MA_StreetAddress__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>