force-app/main/default/objects/BPF__c/fields/MailingAddressifdifferent__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressifdifferent__c</fullName>
    <label>Mailing Address (if different)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>