force-app/main/default/objects/BPF__c/fields/MailingAddressifdifferent_formula__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressifdifferent_formula__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address (if different)</label>
    <type>Text</type>
</CustomField>