force-app/main/default/objects/BPF__c/fields/MainActivities__c.field-meta.xml
<CustomField>
    <fullName>MainActivities__c</fullName>
    <inlineHelpText>What are their main activities?</inlineHelpText>
    <label>Main Activities ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>