force-app/main/default/objects/BPF__c/fields/Methodofpayment__c.field-meta.xml
<CustomField>
    <fullName>Methodofpayment__c</fullName>
    <label>Method of payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>