force-app/main/default/objects/BPF__c/fields/NameonAccount__c.field-meta.xml
<CustomField>
    <fullName>NameonAccount__c</fullName>
    <label>Name on Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>