force-app/main/default/objects/BPF__c/fields/OwnersOwnMoreThan25OrMore__c.field-meta.xml
<CustomField>
    <fullName>OwnersOwnMoreThan25OrMore__c</fullName>
    <label>Owners own more than 25% or more</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>