force-app/main/default/objects/BPF__c/fields/ParentAccID__c.field-meta.xml
<CustomField>
    <fullName>ParentAccID__c</fullName>
    <formula>IF(ISNULL( AccountName__r.ParentId ), AccountName__r.Parent_Account__c , AccountName__r.ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAccID</label>
    <type>Text</type>
</CustomField>