force-app/main/default/objects/BPF__c/fields/ParentValidation__c.field-meta.xml
<CustomField>
    <fullName>ParentValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Validation</label>
    <type>Checkbox</type>
</CustomField>