force-app/main/default/objects/BPF__c/fields/Payments_same_bank__c.field-meta.xml
<CustomField>
    <fullName>Payments_same_bank__c</fullName>
    <inlineHelpText>Will payments be made directly from the bank account listed in the bank information section below?</inlineHelpText>
    <label>Payment same bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>