force-app/main/default/objects/BPF__c/fields/Paymentsamebankdetail__c.field-meta.xml
<CustomField>
    <fullName>Paymentsamebankdetail__c</fullName>
    <inlineHelpText>If payments will not be made directly from the bank account listed in the bank information section below, please explain why?</inlineHelpText>
    <label>Payment same bank detail</label>
    <type>TextArea</type>
</CustomField>