force-app/main/default/objects/BPF__c/fields/PaymentSameCountry__c.field-meta.xml
<CustomField>
    <fullName>PaymentSameCountry__c</fullName>
    <inlineHelpText>Will payments be made from the same country as you are (i) incorporated in or (ii) where our goods will be delivered to?</inlineHelpText>
    <label>Payment Same Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>