force-app/main/default/objects/BPF__c/fields/Paymentsamecountrydetail__c.field-meta.xml
<CustomField>
    <fullName>Paymentsamecountrydetail__c</fullName>
    <inlineHelpText>If payments will be made from a different country than incorporated or delivered to, please provide details.</inlineHelpText>
    <label>Payment same country detail</label>
    <type>TextArea</type>
</CustomField>