force-app/main/default/objects/BPF__c/fields/PersonalAssociationsDetails__c.field-meta.xml
<CustomField>
    <fullName>PersonalAssociationsDetails__c</fullName>
    <inlineHelpText>If any of the owners or directors have personal associations or family ties with public officials, please provide details.</inlineHelpText>
    <label>Personal Associations Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>