force-app/main/default/objects/BPF__c/fields/PersonalAssociationswithPublicOfficials__c.field-meta.xml
<CustomField>
    <fullName>PersonalAssociationswithPublicOfficials__c</fullName>
    <inlineHelpText>To your knowledge, do any of the owners or directors have personal associations or family ties with public officials?</inlineHelpText>
    <label>Personal Associations with Public Off.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>