force-app/main/default/objects/BPF__c/fields/Phonenumber__c.field-meta.xml
<CustomField>
    <fullName>Phonenumber__c</fullName>
    <label>Phone number:</label>
    <type>Phone</type>
</CustomField>