force-app/main/default/objects/BPF__c/fields/PO_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PO_PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>