force-app/main/default/objects/BPF__c/fields/PrincipalOffice__c.field-meta.xml
<CustomField>
    <fullName>PrincipalOffice__c</fullName>
    <label>Principal Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>