force-app/main/default/objects/BPF__c/fields/Process_WCO__c.field-meta.xml
<CustomField>
    <fullName>Process_WCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process WCO</label>
    <type>Checkbox</type>
</CustomField>