force-app/main/default/objects/BPF__c/fields/RedFlagDetails__c.field-meta.xml
<CustomField>
    <fullName>RedFlagDetails__c</fullName>
    <inlineHelpText>If any red flags have been identified or any of the answers to one or more of the aforementioned questions raise any risks or concerns, please provide details.</inlineHelpText>
    <label>Red Flag Details ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>