force-app/main/default/objects/BPF__c/fields/RedFlags__c.field-meta.xml
<CustomField>
    <fullName>RedFlags__c</fullName>
    <inlineHelpText>Have any red flags been identified or does any of the answers to one or more of the aforementioned questions raise any risks or concerns?</inlineHelpText>
    <label>Red Flags ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>