force-app/main/default/objects/BPF__c/fields/Registered_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Legal_Name__c</fullName>
    <label>Registered Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>