force-app/main/default/objects/BPF__c/fields/RelevantFacts__c.field-meta.xml
<CustomField>
    <fullName>RelevantFacts__c</fullName>
    <inlineHelpText>Are there any other facts or circumstances which could be relevant?</inlineHelpText>
    <label>Relevant Facts ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>