force-app/main/default/objects/BPF__c/fields/Remueration__c.field-meta.xml
<CustomField>
    <fullName>Remueration__c</fullName>
    <inlineHelpText>If the remuneration is based on a percentage relating to sales or purchases made by agent what is the percentage?&quot;</inlineHelpText>
    <label>Remueration % ?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>