force-app/main/default/objects/BPF__c/fields/RemunerationReasonable__c.field-meta.xml
<CustomField>
    <fullName>RemunerationReasonable__c</fullName>
    <inlineHelpText>Is the remuneration reasonable compared to the services to be provided by agent? (using professional personal judgement and common sense)</inlineHelpText>
    <label>Remuneration Reasonable ?</label>
    <type>TextArea</type>
</CustomField>