force-app/main/default/objects/BPF__c/fields/RemunerationType__c.field-meta.xml
<CustomField>
    <fullName>RemunerationType__c</fullName>
    <inlineHelpText>What is the remuneration type?</inlineHelpText>
    <label>Remuneration Type ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>